--- a/Notebooks/Classifier for Game sales.ipynb
+++ b/Notebooks/Classifier for Game sales.ipynb
@@ -7,7 +7,7 @@
    "source": [
     "# Classifier for game sales\n",
     "\n",
-    "This classifier predicts whether a video game will have a high, or low global sales based on the inputs given by the user such as:\n",
+    "This classifier predicts whether a video game will have high, or low global sales based on the inputs given by the user such as:\n",
     "\n",
     "- Platform: The platform on which the game will be released (e.g., PS2, X360, PS3, Wii, etc.).\n",
     "- Year of Release: The year in which the game will be released.\n",
@@ -291,7 +291,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 4,
    "id": "d8b86a67",
    "metadata": {},
    "outputs": [
@@ -314,7 +314,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 5,
    "id": "885925e3",
    "metadata": {},
    "outputs": [
@@ -499,7 +499,7 @@
        "4            High  "
       ]
      },
-     "execution_count": 6,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -519,7 +519,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 6,
    "id": "60c8260d",
    "metadata": {},
    "outputs": [
@@ -648,7 +648,7 @@
        "4       817.4   missing  missing   pre-2000s            High  "
       ]
      },
-     "execution_count": 7,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -658,6 +658,38 @@
     "\n",
     "games.drop(['name', 'year_of_release', 'na_sales', 'eu_sales', 'jp_sales', 'other_sales', 'global_sales'], axis=1, inplace=True)\n",
     "games.head()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "id": "c83449c3",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "platform            object\n",
+       "genre               object\n",
+       "publisher           object\n",
+       "critic_score       float64\n",
+       "critic_count       float64\n",
+       "user_score         float64\n",
+       "user_count         float64\n",
+       "developer           object\n",
+       "rating              object\n",
+       "release_era         object\n",
+       "global_sale_cat     object\n",
+       "dtype: object"
+      ]
+     },
+     "execution_count": 7,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "games.dtypes"
    ]
   },
   {
